--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "node-slack-bot",
+  "name": "swearjar-slackbot",
   "version": "1.0.0",
-  "description": "A sample Beep Boop Node.js Slackbot",
-  "main": "index.js",
+  "description": "",
+  "main": "src/index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node src/index.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/beepboophq/node-slack-bot#readme",
   "dependencies": {
-    "botkit": "0.0.5"
+    "botkit": "0.0.5",
+    "underscore": "^1.8.3"
   }
 }
